Test GitHub action sync

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,7 +9,7 @@
 
 
 /* ===================================
-   Banner Section
+   Banner Section - TEST SYNC
 ====================================== */
 #particles-js {
     display: flex;
