Test GitHub Action sync to GFAI

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,7 +9,7 @@
 
 
 /* ===================================
-   Banner Section - TEST SYNC
+   Banner Section
 ====================================== */
 #particles-js {
     display: flex;
