Remove small change to test sync

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,7 +9,7 @@
 
 
 /* ===================================
-   Banner Section - now test sync the other way
+   Banner Section
 ====================================== */
 #particles-js {
     display: flex;
